# chessZero

./: .gitignore  CLAUDE.md  COMMANDS.md  design.md  pyproject.toml
scripts/: benchmark_gumbel.py  evaluate.py  generate_stockfish_games.py  inspect_buffer.py  play_web.py  probe_consistency_collapse.py  probe_value_collapse.py  probe_value_ondist.py  run_sf_gen.sh  test_stockfish_diversity.py  train.py  train_multi.py  view_buffer_web.py  visualize.py
src/: config.py
src/games/: __init__.py  base.py  checkers.py  chess.py  connect4.py  tictactoe.py
src/mcts/: gumbel.py  mcts.py  sampling.py
src/model/: muzero_net.py  utils.py
src/training/: multi_game_trainer.py  replay_buffer.py  run_id.py  self_play.py  trainer.py
src/viz/: latent_viz.py
tests/: test_asymmetric_generation.py  test_compact_encoding.py  test_consistency_loss.py  test_gumbel.py  test_gumbel_integration.py  test_gumbel_root.py  test_lr_schedule.py  test_mcts.py  test_reanalyze_skips_warmstart.py  test_sampled_muzero.py  test_stockfish_injection.py  test_warmstart_external_values.py
